Biometric verification on changing password visibility

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.Ragraa" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.Ragraa" parent="Theme.AppCompat.NoActionBar" />
 
     <style name="Theme.SplashScreen.MySplash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">#353535</item>
