--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="padding_large">24dp</dimen>
     <dimen name="padding_extra_large">32dp</dimen>
     <dimen name="elevation">8dp</dimen>
+    <dimen name="card_horizontal">12dp</dimen>
+    <dimen name="card_vertical">16dp</dimen>
 </resources>
